# mews

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _gen_arch_diagram.py  pyproject.toml
.github/workflows/: ci.yml
core-specs/: README.md  datasets.yaml  features.yaml  risk_score.yaml  time_alignment.yaml
core_specs/: __init__.py  datasets.yaml  features.yaml  time_alignment.yaml
data-ingestion/: __init__.py  run_ingestion.py
data-ingestion/adapters/: __init__.py
data-ingestion/adapters/financial_news/: __init__.py  fetch.py
data-ingestion/adapters/macro_rates/: __init__.py  fetch.py
data-ingestion/adapters/market_prices/: __init__.py  fetch.py  normalize.py
data-ingestion/adapters/volatility_indices/: fetch.py  normalize.py
data-ingestion/alignment/: __init__.py  aligner.py  calendar.py  forward_fill.py
data-ingestion/outputs/: __init__.py
data-ingestion/schemas/: validate.py
data_ingestion/: run_ingestion.py
data_ingestion/adapters/financial_news/: fetch.py  normalize.py
data_ingestion/adapters/macro_rates/: normalize.py
data_ingestion/adapters/market_prices/: fetch.py
data_ingestion/adapters/volatility_indices/: __init__.py  fetch.py
data_ingestion/alignment/: aligner.py  lag_rules.py
data_ingestion/outputs/: __init__.py
data_ingestion/outputs/datasets/market_prices/v1/: .gitkeep
data_ingestion/outputs/datasets/volatility_indices/v1/: .gitkeep
data_ingestion/schemas/: __init__.py  validate.py
feature_services/: __init__.py
feature_services/graph/: __init__.py  correlation.py  network.py  returns.py  service.py  validate.py
feature_services/numeric/: __init__.py  drawdown.py  liquidity.py  service.py  validate.py  volatility.py  windows.py
feature_services/sentiment/: __init__.py  aggregation.py  inference.py  mapping.py  service.py  validate.py
pipeline/: __init__.py
pipeline/daily_run/: __init__.py  config.py  context.py  features.py  ingestion.py  report.py  risk.py  run.py
risk_engine/: __init__.py
risk_engine/ensemble/: __init__.py  calibration.py  explain.py  service.py  smoothing.py  validate.py  weights.py
risk_engine/evaluation/: __init__.py  compare.py  crises.py  false_positives.py  lead_time.py  report.py
risk_engine/heuristic/: __init__.py  explain.py  normalization.py  service.py  subscores.py  validate.py  weights.py
risk_engine/ml/: __init__.py  config.py  dataset.py  evaluate.py  explain.py  models.py  train.py  validate.py
risk_engine/ml/autoresearch/: __init__.py  evaluate_candidate.py  program.md
tests/: test_autoresearch_evaluate_candidate.py
visualization/: __init__.py  architecture.py  captions.py  chapter_figures.py  config.py  evaluation.py  features.py  risk.py  run_all.py
