# MEWS-FIN: Market Risk Early Warning System
# Phase 2: Data ingestion and time alignment

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mews-fin"
version = "0.2.0"
description = "Research-grade Market Risk Early Warning System using free public data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MEWS-FIN Contributors"}
]
keywords = [
    "systemic-risk",
    "market-risk",
    "early-warning",
    "financial-research",
    "risk-monitoring"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

# Phase 2: Dependencies for data ingestion
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
live = [
    # Optional: for live data fetching
    "yfinance>=0.2.0",
    "pandas-market-calendars>=4.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "yamllint>=1.32",
    "pandas-market-calendars>=4.0",
]

[project.urls]
Repository = "https://github.com/mews-fin/mews-fin"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mews_fin", "data_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
