# MEWS: Market Early Warning System
# Phase 5C: Packaging and distribution

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mews"
version = "1.0.0"
description = "Research-grade Market Early Warning System using free public data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MEWS Contributors"}
]
keywords = [
    "systemic-risk",
    "market-risk",
    "early-warning",
    "financial-research",
    "risk-monitoring"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

# Phase 3.0: Dependencies for data ingestion and feature computation
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "scipy>=1.10",  # For calibration (Platt scaling optimization)
    "matplotlib>=3.6",  # For visualization module (Agg backend)
]

[project.optional-dependencies]
live = [
    # Optional: for live data fetching
    "yfinance>=0.2.0",
    "pandas-market-calendars>=4.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "yamllint>=1.32",
    "pandas-market-calendars>=4.0",
]

[project.urls]
Repository = "https://github.com/mews/mews"

[project.scripts]
mews-run = "pipeline.daily_run.run:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["data_ingestion", "feature_services", "risk_engine", "pipeline", "visualization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools]
packages = [
    "data_ingestion",
    "data_ingestion.adapters",
    "data_ingestion.adapters.financial_news",
    "data_ingestion.adapters.macro_rates",
    "data_ingestion.adapters.market_prices",
    "data_ingestion.adapters.volatility_indices",
    "data_ingestion.alignment",
    "data_ingestion.outputs",
    "data_ingestion.schemas",
    "feature_services",
    "feature_services.graph",
    "feature_services.numeric",
    "feature_services.sentiment",
    "risk_engine",
    "risk_engine.ensemble",
    "risk_engine.evaluation",
    "risk_engine.heuristic",
    "risk_engine.ml",
    "pipeline",
    "pipeline.daily_run",
    "visualization",
]
